--- a/crypto/src/components/navbar/Navbar.css
+++ b/crypto/src/components/navbar/Navbar.css
@@ -94,12 +94,12 @@
 
 @media (max-width: 768px) {
     .navbar {
-        padding: 20px 5%;
+        padding: 20px 2%;
     }
-    .navbar ul {
-        display: none;
+    .navbar h1 {
+        font-size: 1.5rem;
     }
-    .navbar button img {
-        width: 12px;
+    .nav-right {
+        gap: 10px;
     }
 }
