--- a/crypto/src/index.css
+++ b/crypto/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+/* set up of two color themes */
+/* light mode */
 :root {
   --bg-color: #f0f0f0;
   --text-color: #222325;
@@ -16,6 +18,7 @@
   --light-gray: #999;
 }
 
+/* dark mode */
 [data-theme="dark"] {
   --cbg: #222325;
   --bg-color: #222325;
